changed margin top and bottom to 50px

--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ html, body {
     background-color: #1B1924;
     color: #FFF;
     max-width: 390px;
-    margin: 0 auto;
+    margin: 50px auto;
     text-align: center;
     padding: 45px 35px 30px;
 }
